bib and bib csl file modified

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -259,7 +259,7 @@
 @Misc{Kutz2022,
   author = {Prof. J. Nathan Kutz},
   month  = apr,
-  note   = {Lecutre Notes of Course},
+  annote   = {Lecutre Notes of Course},
   title  = {AMATH 568Advanced Differential Equations: Asymptotics \& Perturbations},
   year   = {2022},
   groups = {master},
@@ -412,7 +412,7 @@
   publisher = {Cambridge University Press},
 }
 
-@Online{Inc.2015,
+@Online{plotly_2015,
   address   = {Montreal, QC},
   author    = {Plotly Technologies Inc.},
   groups    = {master},
@@ -459,7 +459,7 @@
   author    = {John Argyris and Gunter Faust and Maria Haase and Rudolf Friedrich},
   title     = {Die Erforschung des Chaos},
   doi       = {10.1007/978-3-662-54546-1},
-  note      = {Translation conducted by the author of this thesis},
+  annote      = {Translation conducted by the author of this thesis},
   publisher = {Springer Berlin Heidelberg},
   groups    = {master, chaos},
   year      = {2017},
@@ -521,7 +521,7 @@
 
 @Misc{kmeans_Init_Points,
   title  = {k-means finding set of initial points},
-  note   = {https://theory.stanford.edu/~sergei/slides/kdd10-thclust.pdf - 30.11.2021},
+  annote   = {https://theory.stanford.edu/~sergei/slides/kdd10-thclust.pdf - 30.11.2021},
   url    = {https://theory.stanford.edu/~sergei/slides/BATS-Means.pdf},
   groups = {master, kmeans},
   owner  = {Sergei Vassilvitskii},
@@ -555,7 +555,7 @@
   author    = {Jörg Frochte},
   title     = {Maschinelles Lernen},
   doi       = {10.3139/9783446463554},
-  note      = {Translation conducted by the author of this thesis},
+  annote      = {Translation conducted by the author of this thesis},
   publisher = {Carl Hanser Verlag {GmbH} {\&} Co. {KG}},
   groups    = {master, regression},
   month     = apr,
@@ -658,7 +658,7 @@ Now available to download in full as a PDF.},
 
 @Misc{2022,
   month     = apr,
-  note      = {https://pysindy.readthedocs.io/en/latest/examples/1\_feature\_overview.html - (2022-04-06)},
+  annote      = {https://pysindy.readthedocs.io/en/latest/examples/1\_feature\_overview.html - (2022-04-06)},
   title     = {pySindy's remark on RK45 vs. LSODA},
   year      = {2022},
   groups    = {master},
@@ -770,7 +770,7 @@ Now available to download in full as a PDF.},
 
 @Misc{2021,
   title     = {Wikipedia entry on chaos theory},
-  note      = {https://en.wikipedia.org/wiki/Chaos\_theory - (29.11.2021)},
+  annote      = {https://en.wikipedia.org/wiki/Chaos\_theory - (29.11.2021)},
   url       = {https://en.wikipedia.org/wiki/Chaos_theory},
   groups    = {master, chaos},
   month     = nov,
@@ -897,13 +897,28 @@ Now available to download in full as a PDF.},
   year      = {2012},
 }
 
+
+@Patent{blair2015composite,
+  title={Composite conformable pressure vessel},
+  author={Blair, Michael D. and Kunz, Richard and Warner, Mark J. and Davis, Kevin and Wolcott, Edward and Turner, Darrel and Bennett, John},
+  annote={US5577630A},
+  assignee={Northrop Grumman Innovation Systems LLC},
+  year={1996},
+  month={nov},
+  day={26},
+  url={https://patents.google.com/patent/US5577630A/en},
+  urldate = {2024-09-03},
+  groups= {pressure_vessel_Section, patents}
+}
+
+
 @Patent{Stahl2017,
   author    = {Stahl, Hans-Ulrich},
   title     = {Fahrzeug mit lasttragendem Drucktank},
   annote      = {DE102015225385A1},
   day       = {22},
   groups    = {hydro_Plane, report_1, patents},
-  month     = jun # {~22},
+  month     = {jun} ,
   publisher = {Google Patents},
   year      = {2017},
   url= {https://patents.google.com/patent/DE102015225385A1/de?oq=DE102015225385A1},
@@ -916,7 +931,7 @@ Now available to download in full as a PDF.},
   annote      = {DE102017011492A1},
   day       = {26},
   groups    = {hydro_Plane, report_1, patents},
-  month     = sep # {~26},
+  month     = {sep},
   publisher = {Google Patents},
   year      = {2019},
   url= {https://patents.google.com/patent/DE102017011492A1/de?oq=DE102017011492A1},
@@ -928,7 +943,7 @@ Now available to download in full as a PDF.},
   title     = {Integrated chassis and compressed gas fuel system of an automotive vehicle},
   annote      = {US5370418A},
   groups    = {hydro_Plane, patents},
-  month     = dec # {~6},
+  month     = {dec},
   publisher = {Google Patents},
   year      = {1994},
   url= {https://patents.google.com/patent/US5370418A/en?oq=US+Patent+5%2c370%2c418},
@@ -955,28 +970,28 @@ Now available to download in full as a PDF.},
   year        = {2020},
 }
 
-@Misc{img_Toyota,
+@online{img_Toyota,
   author = {Darren Halstead},
   title  = {Image, Toyota hydrogen model car},
-  note   = {https://unsplash.com/photos/yhXcqS-f-X4 - 18.08.2022},
+  annote   = {},
   url    = {https://unsplash.com/photos/yhXcqS-f-X4},
   urldate = {2022-08-18},
   groups = {webpages},
 }
 
-@Misc{img_Truck,
+@online{img_Truck,
   author = {Sven Brandsma},
   title  = {Image, truck},
-  note   = {https://unsplash.com/photos/YnSWpIPX3pE - 18.08.2022},
+  annote   = {},
   url    = {https://unsplash.com/photos/YnSWpIPX3pE},
   urldate = {2022-08-18},
   groups = {webpages},
 }
 
-@Misc{img_Ground,
+@online{img_Ground,
   author = {Joshua Coleman},
   title  = {Image, ground storage},
-  note   = {https://unsplash.com/photos/ZVkDLrXGMdw - 18.08.2022},
+  annote   = {},
   url    = {https://unsplash.com/photos/ZVkDLrXGMdw},
   urldate = {2022-08-18},
   groups = {webpages},
@@ -1007,7 +1022,7 @@ Now available to download in full as a PDF.},
 @Misc{img_Bird,
   author = {BernhardJaeck},
   title  = {Image, Flying bird},
-  note   = {https://pixabay.com/photos/crows-birds-animals-nature-7381423/ - 21.08.2022},
+  annote   = {https://pixabay.com/photos/crows-birds-animals-nature-7381423/ - 21.08.2022},
   url    = {https://pixabay.com/photos/crows-birds-animals-nature-7381423/},
   urldate = {2022-08-21},
   groups = {webpages},
@@ -1028,7 +1043,7 @@ Now available to download in full as a PDF.},
   title     = {Beitrag zur Optimierung von Wasserstoffdruckbehältern},
   doi       = {10.1007/978-3-658-21124-0},
   publisher = {Springer Fachmedien Wiesbaden},
-  groups    = {hydro_Plane, report_1},
+  groups    = {hydro_Plane, report_1, pressure_vessel_Section},
 }
 
 @Article{dryer2007spontaneous,
@@ -1067,7 +1082,7 @@ Now available to download in full as a PDF.},
 @Misc{img_Transport,
   author = {Bernd Dittrich},
   title  = {Image, shall represent transportation},
-  note   = {https://unsplash.com/photos/eCc7FjMoR74- 18.08.2022},
+  annote   = {https://unsplash.com/photos/eCc7FjMoR74- 18.08.2022},
   url    = {https://unsplash.com/photos/eCc7FjMoR74},
   urldate = {2022-08-18},
   groups = {webpages},
@@ -1193,14 +1208,24 @@ Now available to download in full as a PDF.},
   publisher    = {Elsevier {BV}},
 }
 
-@Misc{link_Airbus_350,
+@online{link_Airbus_350,
   author = {Airbus},
   title  = {Homepage of Airbus},
-  note   = {https://aircraft.airbus.com/en/aircraft/a350-clean-sheet-clean-start/a350-1000 - 03.04.2024},
+  annote   = {},
   url    = {https://aircraft.airbus.com/en/aircraft/a350-clean-sheet-clean-start/a350-1000},
   urldate = {2024-04-03},
   groups = {webpages},
   owner  = {Airbus},
+}
+
+@online{link_Image_Type_4_Cylinder,
+  author = {U.S. Department of Engery},
+  title  = {Illustrative example for an cylinder shaped hydrogen storage, Fuel Cell Technologies Office, Hydrogen Storage},
+  annote   = {},
+  url    = {https://www.energy.gov/sites/prod/files/2017/03/f34/fcto-h2-storage-fact-sheet.pdf},
+  urldate = {2024-04-24},
+  groups = {webpages},
+  owner  = {U.S. Department of Engery},
 }
 
 @Article{mitsuishi2000dynamic,
@@ -1669,10 +1694,10 @@ Now available to download in full as a PDF.},
   keywords    = {cs.CL, cs.AI},
 }
 
-@Misc{link_Mixtral_8_7,
+@online{link_Mixtral_8_7,
   author  = {Mixtral},
   title   = {Homepage of Mixtral AI},
-  note    = {https://mistral.ai/news/mixtral-of-experts/ - 03.04.2024},
+  annote    = {},
   url     = {https://mistral.ai/news/mixtral-of-experts/},
   urldate = {2024-04-03},
   groups  = {webpages},
@@ -2160,7 +2185,7 @@ Now available to download in full as a PDF.},
 @Misc{link_Javed_Master,
   author = {Javed Arshad Butt},
   title  = {Flow predictions using control-oriented cluster-based network modeling},
-  note   = {https://jav-ed.github.io/master_Thesis/ - 30.03.04.2024},
+  annote   = {https://jav-ed.github.io/master_Thesis/ - 30.03.04.2024},
   url    = {https://jav-ed.github.io/master_Thesis/},
   groups = {master, kmeans, machine_learning},
   owner  = {Javed Arshad Butt},
@@ -2229,7 +2254,7 @@ Now available to download in full as a PDF.},
 @Misc{link_Cluster_Meth,
   author = {scikit-learn},
   title  = {Comparing different clustering algorithms on toy datasets},
-  note   = {https://scikit-learn.org/stable/auto_examples/cluster/plot_cluster_comparison.html - 30.03.04.2024},
+  annote   = {https://scikit-learn.org/stable/auto_examples/cluster/plot_cluster_comparison.html - 30.03.04.2024},
   url    = {https://scikit-learn.org/stable/auto_examples/cluster/plot_cluster_comparison.html},
   groups = {master, kmeans, machine_learning},
   owner  = {scikit-learn},
@@ -2730,7 +2755,7 @@ Now available to download in full as a PDF.},
 @Article{symbeam_tool,
   author  = {António M. Couto Carneiro},
   title   = {symbeam},
-  note    = {https://amcc1996.github.io/},
+  annote    = {https://amcc1996.github.io/},
   groups  = {python_tools},
   journal = {GitHub repository},
   year    = {2020},
@@ -2739,7 +2764,7 @@ Now available to download in full as a PDF.},
 @Article{interdetbeam_tool,
   author  = {Jesse Bonanno},
   title   = {IndeterminateBeam},
-  note    = {https://github.com/JesseBonanno/IndeterminateBeam},
+  annote    = {https://github.com/JesseBonanno/IndeterminateBeam},
   groups  = {python_tools},
   journal = {GitHub repository},
   year    = {2020},
@@ -3142,7 +3167,7 @@ Now available to download in full as a PDF.},
   author = {HBM},
   date   = {2023},
   title  = {HBM, Structural Health Monitoring},
-  note   = {https://www.hbm.com/en/ - 2023},
+  annote   = {https://www.hbm.com/en/ - 2023},
   url    = {https://www.hbm.com/en/},
 }
 
@@ -3632,7 +3657,7 @@ Now available to download in full as a PDF.},
 
 @Misc{kmeans_Visual_Explanation,
   title  = {k-means++ visual explanation},
-  note   = {https://theory.stanford.edu/~sergei/slides/BATS-Means.pdf - 02.09.2024},
+  annote   = {https://theory.stanford.edu/~sergei/slides/BATS-Means.pdf - 02.09.2024},
   url    = {https://theory.stanford.edu/~sergei/slides/BATS-Means.pdf},
   groups = {master, kmeans},
   owner  = {Sergei Vassilvitskii},
@@ -3640,7 +3665,7 @@ Now available to download in full as a PDF.},
 
 @Misc{link_Kmeans_Img_Proc,
   title  = {Image explaining how kmeans works},
-  note   = {https://stanford.edu/~shervine/teaching/cs-229/cheatsheet-unsupervised-learning - 03.04.2024},
+  annote   = {https://stanford.edu/~shervine/teaching/cs-229/cheatsheet-unsupervised-learning - 03.04.2024},
   url    = {https://stanford.edu/~shervine/teaching/cs-229/cheatsheet-unsupervised-learning},
   groups = {master, kmeans},
   owner  = {Shervine Amidi, Stanford},
@@ -3774,10 +3799,10 @@ Now available to download in full as a PDF.},
   publisher    = {Elsevier BV},
 }
 
-@Misc{APUS_0,
+@online{APUS_0,
   author  = {APUS},
   title   = {APUS, aircraft manufacturer},
-  note    = {https://group.apus-aero.com/zero-emission - 27.02.2024},
+  annote    = {},
   url     = {https://group.apus-aero.com/zero-emission/},
   urldate = {2024-02-27},
   groups  = {webpages},
@@ -3785,10 +3810,10 @@ Now available to download in full as a PDF.},
   year    = {2024},
 }
 
-@Misc{APUS_1,
+@online{APUS_1,
   author  = {APUS},
   title   = {APUS, aircraft manufacturer},
-  note    = {https://group.apus-aero.com/wp-content/uploads/2023/10/APUS_i-2_Broschuere_20231027_Web.pdf - 27.02.2024},
+  annote    = {},
   url     = {https://group.apus-aero.com/wp-content/uploads/2023/10/APUS_i-2_Broschuere_20231027_Web.pdf},
   urldate = {2024-02-27},
   groups  = {webpages},
@@ -3834,10 +3859,10 @@ Now available to download in full as a PDF.},
   publisher    = {Elsevier BV},
 }
 
-@Misc{APUS_Image,
-  author  = {Unkown},
+@online{APUS_Image,
+  author  = {APUS},
   title   = {Image of the APUS i2},
-  note    = {https://www.fachkraefteportal-brandenburg.de/ila-2022/apus-aeronautical-engineering-gmbh - 04.09.2024},
+  annote    = {},
   url     = {https://www.fachkraefteportal-brandenburg.de/ila-2022/apus-aeronautical-engineering-gmbh},
   urldate = {2024-09-04},
   groups  = {webpages},
@@ -4094,7 +4119,7 @@ and Guidance Material for Large Rotorcraft CS-29},
 
 
 
-@MISC{EASA_Homepage,
+@online{EASA_Homepage,
   author      = {{European Union Aviation Safety Agency}},
   institution = {European Union Aviation Safety Agency},
   title       = {European Union Aviation Safety Agency's homepage},
@@ -4105,7 +4130,7 @@ and Guidance Material for Large Rotorcraft CS-29},
   groups      = {norms, webpages},
 }
 
-@MISC{FAA_Homepage,
+@online{FAA_Homepage,
   author      = {{Federal Aviation Administration}},
   institution = {Federal Aviation Administration},
   title       = {Federal Aviation Administration's homepage},
@@ -4116,7 +4141,7 @@ and Guidance Material for Large Rotorcraft CS-29},
 }
 
 
-@Misc{SAE_Gas,
+@online{SAE_Gas,
   author      = {{SAE International}},
   title       = {Gaseous Hydrogen Storage for General Aviation AS7373, WIP 2021-07-06},
   type        = {Certification Specification},
@@ -4126,7 +4151,7 @@ and Guidance Material for Large Rotorcraft CS-29},
   institution = {SAE International},
 }
 
-@MISC{SAE_Liquid,
+@online{SAE_Liquid,
   author      = {{SAE International}},
   institution = {SAE International},
   title       = {LIQUID HYDROGEN STORAGE FOR AVIATION AS6679, WIP 2019-11-20},
@@ -4218,7 +4243,7 @@ and Guidance Material for Large Rotorcraft CS-29},
 }
 
 
-@Misc{jari_001,
+@online{jari_001,
   author      = {{Japan Automobile Standards Internationalization Center (JASIC)}},
   title       = {Japan — JARI S001(2004) Technical Standard for Containers of Compressed Hydrogen Vehicle Fuel Devices},
   type        = {Certification Specification},
@@ -4228,7 +4253,7 @@ and Guidance Material for Large Rotorcraft CS-29},
   institution = {Japan Automobile Standards Internationalization Center (JASIC)},
 }
 
-@MISC{jari_002,
+@online{jari_002,
   author      = {{Japan Automobile Standards Internationalization Center (JASIC)}},
   institution = {Japan Automobile Standards Internationalization Center (JASIC)},
   title       = {Japan – JARI S002(2004) Technical Standard for Components of Compressed Hydrogen Vehicle Fuel Devices;},
@@ -4238,7 +4263,7 @@ and Guidance Material for Large Rotorcraft CS-29},
   groups      = {norms, webpages},
 }
 
-@MISC{jari_003,
+@online{jari_003,
   author      = {{Jari}},
   institution = {Jari},
   title       = {Japan – JARI S003(2018) Technical Standard for Seamless Containers of Compressed Hydrogen Vehicle Fuel Devices;},
@@ -4249,7 +4274,7 @@ and Guidance Material for Large Rotorcraft CS-29},
 }
 
 
-@MISC{global_registry,
+@online{global_registry,
   author      = {{United Nations}},
   institution = {United Nations},
   title       = {Addendum 13: UN Global Technical Regulation No. 13},
@@ -4259,14 +4284,14 @@ and Guidance Material for Large Rotorcraft CS-29},
   groups      = {norms, webpages},
 }
 
-@MISC{eihp,
+@Online{eihp,
   author      = {{EU, Reinhold Wurster}},
-  institution = {EU},
   title       = {European Integrated Hydrogen Project, EIHP Final Reports},
-  url = {http://www.eihp.org/public/publications.html},
-  urldate = {2024-09-06},
-  type        = {Certification Specification},
+  url         = {http://www.eihp.org/public/publications.html},
+  urldate     = {2024-09-06},
   groups      = {norms, webpages},
+  institution = {EU},
+  type        = {Certification Specification},
 }
 
 @TechReport{iso_15869,
@@ -4673,7 +4698,7 @@ Part 1: Flow capacities up to and including 120 g/s},
 
 
 
-@MISC{tped,
+@online{tped,
   author      = {APRAGAZ},
   title       = {Transportable pressure equipment (TPED)},
   url = {https://apragaz.com/en/enterprises-industry/transportable-pressure-equipment-adr-rid-imdg-vehicles/tped},
@@ -4682,7 +4707,7 @@ Part 1: Flow capacities up to and including 120 g/s},
   groups      = {norms, webpages},
 }
 
-@Misc{eu_ped,
+@online{eu_ped,
   author  = {European Union},
   title   = {Directive 2014/68/EU of the European Parliament and of the Council of 15 May 2014 on the harmonisation of the laws of the Member States relating to the making available on the market of pressure equipment (recast) Text with EEA relevance, Document 32014L0068},
   type    = {Certification Specification},
@@ -4692,7 +4717,7 @@ Part 1: Flow capacities up to and including 120 g/s},
 }
 
 
-@MISC{asme_hydro,
+@online{asme_hydro,
   author      = {The American Society of Mechanical Engineers (ASME)},
   title       = {The American Society of Mechanical Engineers (ASME), offers multiple hydrogen related standards},
   url = {https://www.asme.org/codes-standards},
@@ -4911,6 +4936,7 @@ Part 1: Flow capacities up to and including 120 g/s},
 2 StaticGroup:standards_section\;0\;1\;0x7c7c7cff\;\;\;;
 3 StaticGroup:strandard_defintion\;0\;0\;0x707070ff\;\;\;;
 3 StaticGroup:airacft_subsection\;0\;1\;0x707070ff\;\;\;;
+3 StaticGroup:pressure_vessel_Section\;0\;1\;\;\;\;;
 1 StaticGroup:swith\;0\;0\;0x8a8a8aff\;\;\;;
 1 StaticGroup:webpages\;0\;1\;0x8a8a8aff\;\;\;;
 1 StaticGroup:Reports\;0\;0\;0x8a8a8aff\;\;\;;
