--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -3596,7 +3596,7 @@ Now available to download in full as a PDF.},
 
 @InProceedings{Bikov2022,
   author    = {Bikov, Tsvyatko and Mihaylov, Grigor and Iliev, Teodor and Stoyanov, Ivaylo},
-  booktitle = {2022 8th International Conference on Energy Efficiency and Agricultural Engineering (EE&amp;AE)},
+  booktitle = {2022 8th International Conference on Energy Efficiency and Agricultural Engineering},
   date      = {2022-06},
   title     = {Drone Surveillance in the Modern Agriculture},
   doi       = {10.1109/eeae53789.2022.9831375},
@@ -3916,7 +3916,7 @@ Now available to download in full as a PDF.},
   number       = {2},
   pages        = {269--284},
   volume       = {7},
-  groups       = {state_of_art, tank_types},
+  groups       = {state_of_art, tank_types, pressure_vessel_Section},
   publisher    = {Elsevier BV},
 }
 
@@ -3940,14 +3940,6 @@ Now available to download in full as a PDF.},
   year      = {2009},
 }
 
-@InCollection{khzouz2020hydrogen,
-  author    = {Khzouz, Martin and Gkanas, Evangelos I},
-  booktitle = {Renewable Energy-Resources, Challenges and Applications},
-  title     = {Hydrogen technologies for mobility and stationary applications: hydrogen production, storage and infrastructure development},
-  publisher = {IntechOpen},
-  groups    = {report_1},
-  year      = {2020},
-}
 
 @Book{Klell2018,
   author    = {Klell, Manfred and Eichlseder, Helmut and Trattner, Alexander},
@@ -4909,6 +4901,205 @@ Part 1: Flow capacities up to and including 120 g/s},
   journal   = {INCAS Bulletin},
   publisher = {INCAS-National Institute for Aerospace Research" Elie Carafoli"},
   year      = {2012},
+}
+
+@Article{Jaber2024,
+  author       = {Jaber, Mariam and Yahya, Abdullah and Arif, Abul Fazal and Jaber, Hadi and Alkhedher, Mohammad},
+  date         = {2024-09},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {Burst pressure performance comparison of type V hydrogen tanks: Evaluating various shapes and materials},
+  doi          = {10.1016/j.ijhydene.2024.07.315},
+  issn         = {0360-3199},
+  pages        = {906--917},
+  volume       = {81},
+  groups       = {pressure_vessel_Section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Li2020,
+  author       = {Li, Xinfeng and Ma, Xianfeng and Zhang, Jin and Akiyama, Eiji and Wang, Yanfei and Song, Xiaolong},
+  date         = {2020-04},
+  journaltitle = {Acta Metallurgica Sinica (English Letters)},
+  title        = {Review of Hydrogen Embrittlement in Metals: Hydrogen Diffusion, Hydrogen Characterization, Hydrogen Embrittlement Mechanism and Prevention},
+  doi          = {10.1007/s40195-020-01039-7},
+  issn         = {2194-1289},
+  number       = {6},
+  pages        = {759--773},
+  volume       = {33},
+  groups       = {pressure_vessel_Section},
+  publisher    = {Springer Science and Business Media LLC},
+}
+
+@Article{Jia2023,
+  author       = {Jia, Guanwei and Lei, Mingyu and Li, Mengya and Xu, Weiqing and Li, Rui and Lu, Yanghui and Cai, Maolin},
+  date         = {2023-09},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {Hydrogen embrittlement in hydrogen-blended natural gas transportation systems: A review},
+  doi          = {10.1016/j.ijhydene.2023.04.266},
+  issn         = {0360-3199},
+  number       = {82},
+  pages        = {32137--32157},
+  volume       = {48},
+  groups       = {pressure_vessel_Section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Campari2023,
+  author       = {Campari, Alessandro and Ustolin, Federico and Alvaro, Antonio and Paltrinieri, Nicola},
+  date         = {2023-11},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {A review on hydrogen embrittlement and risk-based inspection of hydrogen technologies},
+  doi          = {10.1016/j.ijhydene.2023.05.293},
+  issn         = {0360-3199},
+  number       = {90},
+  pages        = {35316--35346},
+  volume       = {48},
+  groups       = {pressure_vessel_Section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Meda2023,
+  author       = {Meda, Ujwal Shreenag and Bhat, Nidhi and Pandey, Aditi and Subramanya, K.N. and Lourdu Antony Raj, M.A.},
+  date         = {2023-06},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {Challenges associated with hydrogen storage systems due to the hydrogen embrittlement of high strength steels},
+  doi          = {10.1016/j.ijhydene.2023.01.292},
+  issn         = {0360-3199},
+  number       = {47},
+  pages        = {17894--17913},
+  volume       = {48},
+  groups       = {pressure_vessel_Section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Gong2022,
+  author       = {Gong, Peng and Turk, Andrej and Nutter, John and Yu, Feng and Wynne, Bradley and Rivera-Diaz-del-Castillo, Pedro and Mark Rainforth, W.},
+  date         = {2022-01},
+  journaltitle = {Acta Materialia},
+  title        = {Hydrogen embrittlement mechanisms in advanced high strength steel},
+  doi          = {10.1016/j.actamat.2021.117488},
+  issn         = {1359-6454},
+  pages        = {117488},
+  volume       = {223},
+  groups       = {pressure_vessel_Section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Rivard2019,
+  author       = {Rivard, Etienne and Trudeau, Michel and Zaghib, Karim},
+  date         = {2019-06},
+  journaltitle = {Materials},
+  title        = {Hydrogen Storage for Mobility: A Review},
+  doi          = {10.3390/ma12121973},
+  issn         = {1996-1944},
+  number       = {12},
+  pages        = {1973},
+  volume       = {12},
+  groups       = {pressure_vessel_Section},
+  publisher    = {MDPI AG},
+}
+
+@InCollection{khzouz2020hydrogen,
+  author    = {Khzouz, Martin and Gkanas, Evangelos I},
+  booktitle = {Renewable Energy-Resources, Challenges and Applications},
+  title     = {Hydrogen technologies for mobility and stationary applications: hydrogen production, storage and infrastructure development},
+  publisher = {IntechOpen},
+  groups    = {report_1, pressure_vessel_Section},
+  year      = {2020},
+}
+
+@Article{Wang2021b,
+  author       = {Wang, Zhenzhou and Wang, Yikun and Afshan, Sheida and Hjalmarsson, Johanna},
+  date         = {2021-02},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {A review of metallic tanks for H2 storage with a view to application in future green shipping},
+  doi          = {10.1016/j.ijhydene.2020.11.168},
+  issn         = {0360-3199},
+  number       = {9},
+  pages        = {6151--6179},
+  volume       = {46},
+  groups       = {pressure_vessel_Section},
+  publisher    = {Elsevier BV},
+}
+
+@InProceedings{Jella2024,
+  author    = {Jella, Saatvik and Gupta, Ramesh Burela and Gupta, Ankit and Bhadoria, Shravan Kumar},
+  booktitle = {14TH INTERNATIONAL CONFERENCE ON MATERIALS PROCESSING AND CHARACTERIZATION 2023},
+  date      = {2024},
+  title     = {Computational study of type IV hydrogen tanks},
+  doi       = {10.1063/5.0192690},
+  pages     = {030036},
+  publisher = {AIP Publishing},
+  volume    = {3007},
+  groups    = {pressure_vessel_Section},
+  issn      = {0094-243X},
+}
+
+@Article{Moradi2019,
+  author       = {Moradi, Ramin and Groth, Katrina M.},
+  date         = {2019-05},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {Hydrogen storage and delivery: Review of the state of the art technologies and risk and reliability analysis},
+  doi          = {10.1016/j.ijhydene.2019.03.041},
+  issn         = {0360-3199},
+  number       = {23},
+  pages        = {12254--12269},
+  volume       = {44},
+  groups       = {pressure_vessel_Section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Air2023,
+  author       = {Air, Alexander and Shamsuddoha, Md and Gangadhara Prusty, B.},
+  date         = {2023-03},
+  journaltitle = {Composites Part B: Engineering},
+  title        = {A review of Type V composite pressure vessels and automated fibre placement based manufacturing},
+  doi          = {10.1016/j.compositesb.2023.110573},
+  issn         = {1359-8368},
+  pages        = {110573},
+  volume       = {253},
+  groups       = {pressure_vessel_Section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Air2023a,
+  author       = {Air, Alexander and Oromiehie, Ebrahim and Prusty, B. Gangadhara},
+  date         = {2023-11},
+  journaltitle = {Composites Part B: Engineering},
+  title        = {Design and manufacture of a Type V composite pressure vessel using automated fibre placement},
+  doi          = {10.1016/j.compositesb.2023.111027},
+  issn         = {1359-8368},
+  pages        = {111027},
+  volume       = {266},
+  groups       = {pressure_vessel_Section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Shin2023,
+  author       = {Shin, Hyun Kyu and Ha, Sung Kyu},
+  date         = {2023-07},
+  journaltitle = {Energies},
+  title        = {A Review on the Cost Analysis of Hydrogen Gas Storage Tanks for Fuel Cell Vehicles},
+  doi          = {10.3390/en16135233},
+  issn         = {1996-1073},
+  number       = {13},
+  pages        = {5233},
+  volume       = {16},
+  groups       = {pressure_vessel_Section},
+  publisher    = {MDPI AG},
+}
+
+@Article{KubilayKarayel2023,
+  author       = {Kubilay Karayel, G. and Javani, Nader and Dincer, Ibrahim},
+  date         = {2023-09},
+  journaltitle = {Energy Conversion and Management},
+  title        = {A comprehensive assessment of energy storage options for green hydrogen},
+  doi          = {10.1016/j.enconman.2023.117311},
+  issn         = {0196-8904},
+  pages        = {117311},
+  volume       = {291},
+  groups       = {pressure_vessel_Section},
+  publisher    = {Elsevier BV},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
