--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -119,7 +119,7 @@
   doi       = {10.3139/9783446436046},
   isbn      = {9783446436046},
   publisher = {Carl Hanser Verlag GmbH & Co. KG},
-  groups    = {CFK, structural tests, technische_mechanik},
+  groups    = {CFK, structural tests, technische_mechanik, pressure_vessel_Section},
 }
 
 @Book{Schuermann2007,
@@ -129,7 +129,7 @@
   doi       = {10.1007/978-3-540-72190-1},
   isbn      = {9783540721901},
   publisher = {Springer Berlin Heidelberg},
-  groups    = {CFK},
+  groups    = {CFK, pressure_vessel_Section},
 }
 
 
@@ -1465,7 +1465,7 @@ Now available to download in full as a PDF.},
   doi          = {10.1007/978-3-662-63961-0},
   isbn         = {9783662639610},
   publisher    = {Springer Berlin Heidelberg},
-  groups       = {report_2},
+  groups       = {report_2, pressure_vessel_Section},
   issn         = {2512-5214},
   journaltitle = {Springer-Lehrbuch},
 }
@@ -5100,6 +5100,185 @@ Part 1: Flow capacities up to and including 120 g/s},
   volume       = {291},
   groups       = {pressure_vessel_Section},
   publisher    = {Elsevier BV},
+}
+
+@InProceedings{aceves2006advanced,
+  author    = {Aceves, Salvador M and Berry, Gene D and Weisberg, Andrew H and Espinosa-Loza, Francisco and Perfect, Scott A},
+  booktitle = {Proceedings of the 16th world hydrogen energy conference},
+  title     = {Advanced concepts for vehicular containment of compressed and cryogenic hydrogen},
+  pages     = {10--15},
+  groups    = {pressure_vessel_Section},
+  year      = {2006},
+}
+
+@Article{Yersak2019,
+  author       = {Yersak, Thomas A. and Abd Elhamid, Mahmoud and Dailly, Anne and Rogers, Michael and Prince, Jason and Cai, Mei},
+  date         = {2019-08},
+  journaltitle = {International Journal of Pressure Vessels and Piping},
+  title        = {Dynamics of a type IV conformable pressure vessel for natural gas passenger vehicles},
+  doi          = {10.1016/j.ijpvp.2019.103923},
+  issn         = {0308-0161},
+  pages        = {103923},
+  volume       = {175},
+  groups       = {pressure_vessel_Section},
+  publisher    = {Elsevier BV},
+}
+
+@InProceedings{haaland2000high,
+  author       = {Haaland, Andrew},
+  booktitle    = {Proceedings of the 2000 Hydrogen Program Review},
+  title        = {High-Pressure Conformable Hydrogen Storage for Fuel Cell Vehicles},
+  note         = {NREL/CP-570-28890},
+  organization = {NREL},
+  publisher    = {Thiokol Propulsion},
+  url          = {www1.eere.energy.gov/hydrogenandfuelcells/pdfs/28890cc.pdf},
+  address      = {Brigham City, UT},
+  groups       = {pressure_vessel_Section},
+  year         = {2000},
+}
+
+@Article{Geuskens2011,
+  author       = {Geuskens, F. J. J. M. M. and Bergsma, O. K. and Koussios, S. and Beukers, A.},
+  date         = {2011-08},
+  journaltitle = {AIAA Journal},
+  title        = {Analysis of Conformable Pressure Vessels: Introducing the Multi-Bubble},
+  doi          = {10.2514/1.j050822},
+  issn         = {1533-385X},
+  number       = {8},
+  pages        = {1683--1692},
+  volume       = {49},
+  groups       = {pressure_vessel_Section},
+  publisher    = {American Institute of Aeronautics and Astronautics (AIAA)},
+}
+
+@Article{Czerwinski2021,
+  author       = {Czerwinski, Frank},
+  date         = {2021-11},
+  journaltitle = {Materials},
+  title        = {Current Trends in Automotive Lightweighting Strategies and Materials},
+  doi          = {10.3390/ma14216631},
+  issn         = {1996-1944},
+  number       = {21},
+  pages        = {6631},
+  volume       = {14},
+  groups       = {pressure_vessel_Section},
+  publisher    = {MDPI AG},
+}
+
+@Article{Wang2023a,
+  author       = {Wang, Binze and Zhang, Zhengyang and Xu, Guochang and Zeng, Xianlai and Hu, Wentao and Matsubae, Kazuyo},
+  date         = {2023-04},
+  journaltitle = {Resources, Conservation and Recycling},
+  title        = {Wrought and cast aluminum flows in China in the context of electric vehicle diffusion and automotive lightweighting},
+  doi          = {10.1016/j.resconrec.2023.106877},
+  issn         = {0921-3449},
+  pages        = {106877},
+  volume       = {191},
+  groups       = {pressure_vessel_Section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Hou2023,
+  author       = {Hou, Yong and Min, Junying and Lee, Myoung-Gyu},
+  date         = {2023-08},
+  journaltitle = {Automotive Innovation},
+  title        = {Non-associated and Non-quadratic Characteristics in Plastic Anisotropy of Automotive Lightweight Sheet Metals},
+  doi          = {10.1007/s42154-023-00232-5},
+  issn         = {2522-8765},
+  number       = {3},
+  pages        = {364--378},
+  volume       = {6},
+  groups       = {pressure_vessel_Section},
+  publisher    = {Springer Science and Business Media LLC},
+}
+
+@Article{Khan2024,
+  author       = {Khan, Numan and Riccio, Aniello},
+  date         = {2024-08},
+  journaltitle = {Progress in Aerospace Sciences},
+  title        = {A systematic review of design for additive manufacturing of aerospace lattice structures: Current trends and future directions},
+  doi          = {10.1016/j.paerosci.2024.101021},
+  issn         = {0376-0421},
+  pages        = {101021},
+  volume       = {149},
+  groups       = {pressure_vessel_Section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Chen2023,
+  author       = {Chen, Yonglin and Zhang, Junming and Li, Zefu and Zhang, Huliang and Chen, Jiping and Yang, Weidong and Yu, Tao and Liu, Weiping and Li, Yan},
+  date         = {2023-02},
+  journaltitle = {Aerospace},
+  title        = {Manufacturing Technology of Lightweight Fiber-Reinforced Composite Structures in Aerospace: Current Situation and toward Intellectualization},
+  doi          = {10.3390/aerospace10030206},
+  issn         = {2226-4310},
+  number       = {3},
+  pages        = {206},
+  volume       = {10},
+  groups       = {pressure_vessel_Section},
+  publisher    = {MDPI AG},
+}
+
+@Article{Acanfora2023,
+  author       = {Acanfora, Valerio and Sellitto, Andrea and Russo, Angela and Zarrelli, Mauro and Riccio, Aniello},
+  date         = {2023-06},
+  journaltitle = {Aerospace Science and Technology},
+  title        = {Experimental investigation on 3D printed lightweight sandwich structures for energy absorption aerospace applications},
+  doi          = {10.1016/j.ast.2023.108276},
+  issn         = {1270-9638},
+  pages        = {108276},
+  volume       = {137},
+  groups       = {pressure_vessel_Section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Okorie2023,
+  author       = {Okorie, Onyekachi and Perveen, Asma and Talamona, Didier and Kostas, Konstantinos},
+  date         = {2023-12},
+  journaltitle = {Applied Sciences},
+  title        = {Topology Optimization of an Aerospace Bracket: Numerical and Experimental Investigation},
+  doi          = {10.3390/app132413218},
+  issn         = {2076-3417},
+  number       = {24},
+  pages        = {13218},
+  volume       = {13},
+  groups       = {pressure_vessel_Section},
+  publisher    = {MDPI AG},
+}
+
+@Article{Seo2023,
+  author       = {Seo, Junhyeon and Kapania, Rakesh K.},
+  date         = {2023-01},
+  journaltitle = {AIAA Journal},
+  title        = {Development of Deep Convolutional Neural Network for Structural Topology Optimization},
+  doi          = {10.2514/1.j061664},
+  issn         = {1533-385X},
+  pages        = {1--14},
+  groups       = {pressure_vessel_Section},
+  publisher    = {American Institute of Aeronautics and Astronautics (AIAA)},
+}
+
+@Article{Mori2009,
+  author       = {Mori, D. and Hirose, K.},
+  date         = {2009-05},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {Recent challenges of hydrogen storage technologies for fuel cell vehicles},
+  doi          = {10.1016/j.ijhydene.2008.07.115},
+  issn         = {0360-3199},
+  number       = {10},
+  pages        = {4569--4574},
+  volume       = {34},
+  groups       = {pressure_vessel_Section},
+  publisher    = {Elsevier BV},
+}
+
+@Book{Law2013,
+  author      = {Law, Karen and Rosenfeld, Jeffrey and Han, Vickie and Chan, Michael and Chiang, Helena and Leonard, Jon},
+  date        = {2013-03},
+  title       = {U.S. Department of Energy Hydrogen Storage Cost Analysis},
+  doi         = {10.2172/1082754},
+  groups      = {pressure_vessel_Section},
+  institution = {Office of Scientific and Technical Information (OSTI)},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
