--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -422,6 +422,7 @@
   year      = {2015},
 }
 
+
 @MastersThesis{Pierzyna2021,
   author = {Maximilian Pierzyna},
   school = {TU Braunschweig},
@@ -968,6 +969,15 @@ Now available to download in full as a PDF.},
   type        = {Standard},
   groups      = {norms},
   year        = {2020},
+}
+
+@Online{link_plastiker,
+  author    = {plastiker},
+  title     = {Raw Materials & Prices},
+  groups     = {webpages, pressure_vessel_Section},
+  url       = {https://plasticker.de/preise/},
+  urldate = {2024-09-26},
+  year      = {2015},
 }
 
 @online{img_Toyota,
@@ -5279,6 +5289,20 @@ Part 1: Flow capacities up to and including 120 g/s},
   doi         = {10.2172/1082754},
   groups      = {pressure_vessel_Section},
   institution = {Office of Scientific and Technical Information (OSTI)},
+}
+
+@Article{Shin2023a,
+  author       = {Shin, Hyun Kyu and Ha, Sung Kyu},
+  date         = {2023-12},
+  journaltitle = {Advanced Composite Materials},
+  title        = {Techno-economic analysis of type III and IV composite hydrogen storage tanks for fuel cell vehicles},
+  doi          = {10.1080/09243046.2023.2278258},
+  issn         = {1568-5519},
+  number       = {4},
+  pages        = {527--559},
+  volume       = {33},
+  groups       = {pressure_vessel_Section},
+  publisher    = {Informa UK Limited},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
