--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -5305,6 +5305,20 @@ Part 1: Flow capacities up to and including 120 g/s},
   publisher    = {Informa UK Limited},
 }
 
+@Article{Yanxing2019,
+  author       = {Yanxing, Zhao and Maoqiong, Gong and Yuan, Zhou and Xueqiang, Dong and Jun, Shen},
+  date         = {2019-06},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {Thermodynamics analysis of hydrogen storage based on compressed gaseous hydrogen, liquid hydrogen and cryo-compressed hydrogen},
+  doi          = {10.1016/j.ijhydene.2019.04.207},
+  issn         = {0360-3199},
+  number       = {31},
+  pages        = {16833--16840},
+  volume       = {44},
+  groups       = {pressure_vessel_Section},
+  publisher    = {Elsevier BV},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
