inshallah before juma

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -3912,7 +3912,7 @@ Now available to download in full as a PDF.},
   number       = {85},
   pages        = {33223--33259},
   volume       = {48},
-  groups       = {state_of_art},
+  groups       = {state_of_art, pressure_vessel_Section},
   publisher    = {Elsevier BV},
 }
 
@@ -5315,6 +5315,19 @@ Part 1: Flow capacities up to and including 120 g/s},
   number       = {31},
   pages        = {16833--16840},
   volume       = {44},
+  groups       = {pressure_vessel_Section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Bosu2024,
+  author       = {Bosu, Subrajit and Rajamohan, Natarajan},
+  date         = {2024-01},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {Recent advancements in hydrogen storage - Comparative review on methods, operating conditions and challenges},
+  doi          = {10.1016/j.ijhydene.2023.01.344},
+  issn         = {0360-3199},
+  pages        = {352--370},
+  volume       = {52},
   groups       = {pressure_vessel_Section},
   publisher    = {Elsevier BV},
 }
